--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <script src="lesson1/main.js"></script>
-    <script src="lesson2/main.js"></script>
-    <script src="lesson3/main.js"></script>
+    <script src="js/lesson1/les1.js"></script>
+    <script src="js/lesson2/les2.js"></script>
+    <script src="js/lesson3/les3.js"></script>
   </body>
 </html>
